-
Bug
-
Resolution: Fixed
-
P2
-
8-shenandoah, 11-shenandoah, 13, 14, 15
-
b24
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246531 | 14u-cpu | Roland Westrelin | P2 | Resolved | Fixed | master |
| JDK-8246091 | 14.0.2 | Roland Westrelin | P2 | Resolved | Fixed | b09 |
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/zgu/ws/jdk/src/hotspot/share/opto/node.hpp:800), pid=10252, tid=10265
# assert(is_Bool()) failed: invalid node class
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.zgu.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.zgu.jdk, compiled mode, tiered, compressed oops, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1270134] Matcher::collect_null_checks(Node*, Node*)+0x244
To reproduce:
TEST_VM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=aggressive -Xcomp" make CONF=linux-x86_64-server-fastdebug run-test TEST=com/sun/jdi/PopAsynchronousTest.java
#
# Internal Error (/home/zgu/ws/jdk/src/hotspot/share/opto/node.hpp:800), pid=10252, tid=10265
# assert(is_Bool()) failed: invalid node class
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.zgu.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.zgu.jdk, compiled mode, tiered, compressed oops, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1270134] Matcher::collect_null_checks(Node*, Node*)+0x244
To reproduce:
TEST_VM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=aggressive -Xcomp" make CONF=linux-x86_64-server-fastdebug run-test TEST=com/sun/jdi/PopAsynchronousTest.java
- backported by
-
JDK-8246091 Shenandoah: C2 assertion fails in Matcher::collect_null_checks
-
- Resolved
-
-
JDK-8246531 Shenandoah: C2 assertion fails in Matcher::collect_null_checks
-
- Resolved
-
- relates to
-
JDK-8244595 [REDO] 8244523: Shenandoah: Remove null-handling in LRB expansion
-
- Resolved
-