8244663: Shenandoah: C2 assertion fails in Matcher::collect_null_checks

Reviewed-by: shade